✨ fix dark mode primary color

--- a/app/globals.css
+++ b/app/globals.css
@@ -82,7 +82,7 @@
 }
 
 .dark {
-  --background: oklch(0.145 0 0);
+  --background: oklch(48.696% 0.05873 148.615);
   --foreground: oklch(0.985 0 0);
   --card: oklch(0.205 0 0);
   --card-foreground: oklch(0.985 0 0);
